Fix placeholder on iOS

--- a/src/css/form.styl
+++ b/src/css/form.styl
@@ -18,6 +18,8 @@ form
 input[type=text]
     -webkit-appearance: none
     -moz-appearance: none
+    &::-webkit-input-placeholder
+      line-height: 1.3em
 
 input, button
   height: 60px
